--- a/collabvm-qt-client.qrc
+++ b/collabvm-qt-client.qrc
@@ -1,4 +1,6 @@
-<RCC version="1.0">
-	<qresource prefix="/">
-	</qresource>
+<RCC>
+  <qresource prefix="Images">
+    <file alias="CollabVM Logo">res/icon.png</file>
+    <file alias="Placeholder VM image">res/placeholder_vm_image.jpg</file>
+  </qresource>
 </RCC>
