--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -155,6 +155,7 @@
    <addaction name="action_open_settings"/>
    <addaction name="action_refresh_all_servers"/>
    <addaction name="action_open_help"/>
+   <addaction name="action_debug_button"/>
   </widget>
   <action name="action_open_settings">
    <property name="icon">
@@ -193,6 +194,20 @@
    </property>
    <property name="toolTip">
     <string>Refresh all CollabVM server instances.</string>
+   </property>
+   <property name="menuRole">
+    <enum>QAction::MenuRole::ApplicationSpecificRole</enum>
+   </property>
+  </action>
+  <action name="action_debug_button">
+   <property name="icon">
+    <iconset theme="QIcon::ThemeIcon::ApplicationExit"/>
+   </property>
+   <property name="text">
+    <string>debug_button</string>
+   </property>
+   <property name="toolTip">
+    <string>Debug Button</string>
    </property>
    <property name="menuRole">
     <enum>QAction::MenuRole::ApplicationSpecificRole</enum>
