--- a/src/ui/vms/vm_window.ui
+++ b/src/ui/vms/vm_window.ui
@@ -6,19 +6,34 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>671</width>
+    <height>566</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>174</width>
+    <height>76</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
+  <property name="windowIcon">
+   <iconset theme="QIcon::ThemeIcon::Computer"/>
+  </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0">
-    <widget class="QListView" name="user_list_view"/>
+    <widget class="QListView" name="user_list_view">
+     <property name="uniformItemSizes">
+      <bool>true</bool>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
- <resources/>
+ <resources>
+  <include location="../../../collabvm-qt-client.qrc"/>
+ </resources>
  <connections/>
 </ui>
