--- a/src/ui/vms/vm_window.ui
+++ b/src/ui/vms/vm_window.ui
@@ -61,10 +61,10 @@
         <bool>true</bool>
        </property>
       </widget>
-      <widget class="QListView" name="chat_list_view">
+      <widget class="QTextBrowser" name="chat_output_view">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-         <horstretch>1</horstretch>
+         <horstretch>5</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
