--- a/src/ui/vms/vm_window.ui
+++ b/src/ui/vms/vm_window.ui
@@ -61,7 +61,7 @@
         <bool>true</bool>
        </property>
       </widget>
-      <widget class="QTextBrowser" name="chat_output_view">
+      <widget class="QListView" name="chat_msg_list_view">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
          <horstretch>5</horstretch>
